--- a/DataScienceII_EugeniaIngaramo.ipynb
+++ b/DataScienceII_EugeniaIngaramo.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOJi/U8CDsJP9jkbQOu9Doc",
+      "authorship_tag": "ABX9TyP/ANBbT2/1QtopfUyi1o64",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -105,7 +105,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 104,
+      "execution_count": null,
       "metadata": {
         "id": "ZcCNhdHM_4K_"
       },
@@ -142,6 +142,16 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "<a id=\"1\"></a>\n",
+        "# <div style=\"padding:20px;color:white;margin:0;font-size:35px;font-family:Verdana;text-align:center;display:fill;border-radius:5px;background-color:#254E58;overflow:hidden\"><b>📊 Adquisición de Datos 📊</b></div>"
+      ],
+      "metadata": {
+        "id": "03AAJc6zGR5p"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# Lectura del dataset\n",
@@ -158,7 +168,7 @@
         "id": "w0ux86UfDkJD",
         "outputId": "9a42eb3f-a2e8-4bbe-b191-ff305b7d9b68"
       },
-      "execution_count": 105,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -606,7 +616,7 @@
         "id": "swUMxE7mEatR",
         "outputId": "e17ee14b-a266-470d-bb94-8543f48d31a1"
       },
-      "execution_count": 106,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -649,7 +659,7 @@
         "id": "BV_nDzupQt7W",
         "outputId": "971e8d74-ea3a-4e4f-f953-6cbb197cf3e3"
       },
-      "execution_count": 107,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -698,7 +708,7 @@
         "id": "6xnagbRzrBow",
         "outputId": "37b93ee5-697f-45b1-e9a8-d2174f798983"
       },
-      "execution_count": 108,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -745,7 +755,7 @@
         "id": "Uri8fSIReBF5",
         "outputId": "d5387bb4-6d9f-4700-b625-1f373a5f1f97"
       },
-      "execution_count": 109,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1093,7 +1103,7 @@
         "id": "MgXKUH8bZWsJ",
         "outputId": "118398a1-5586-4ca9-c235-0e5195d57f0f"
       },
-      "execution_count": 110,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1131,7 +1141,7 @@
         "id": "3SSmPIEqcFo4",
         "outputId": "dc2f4494-03f8-4b79-e989-3aa0779f9e89"
       },
-      "execution_count": 111,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1660,7 +1670,7 @@
         },
         "outputId": "bc048521-f48f-40cb-c394-118aacdd1fcf"
       },
-      "execution_count": 112,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1712,7 +1722,7 @@
         "id": "IjYghh0TRF7_",
         "outputId": "9f1a0e20-a477-4f0c-9b63-4a94b5dc7847"
       },
-      "execution_count": 113,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1770,7 +1780,7 @@
         "id": "UKkZQpB5P-cL",
         "outputId": "48c01fc2-8d78-4e6c-ff35-9c2c99c7d3fb"
       },
-      "execution_count": 114,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1805,7 +1815,7 @@
         "id": "8TO2zxDHnzAX",
         "outputId": "acf93ade-d79a-4874-f6fc-c8d96bc760a2"
       },
-      "execution_count": 115,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1936,7 +1946,7 @@
         "id": "TxU-xewjhH1n",
         "outputId": "50be8f18-5a83-4d07-d27b-7702f85eb770"
       },
-      "execution_count": 116,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2350,7 +2360,7 @@
         "id": "NdGWYa8UH9k7",
         "outputId": "8bd78486-5388-440c-c950-f0a483d97060"
       },
-      "execution_count": 117,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2384,7 +2394,7 @@
         "id": "Va6xaZdgR4iy",
         "outputId": "f38b7ee7-0bf6-4de9-c3ea-655717a3b689"
       },
-      "execution_count": 118,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2413,7 +2423,7 @@
         "id": "NUmzoAa2T-4R",
         "outputId": "eb00f4cc-15d2-4c8c-c464-2993689f1ad3"
       },
-      "execution_count": 119,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2787,7 +2797,7 @@
         "id": "XMyRtUPf4_cx",
         "outputId": "6a2de65f-52d2-400d-dc89-55a038871751"
       },
-      "execution_count": 120,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2829,7 +2839,7 @@
         "id": "PqJQCefcbsOj",
         "outputId": "1f7019ea-d033-4269-b81d-89ad7adb41c9"
       },
-      "execution_count": 121,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2876,7 +2886,7 @@
         "id": "zMzZhYHzcCiM",
         "outputId": "7d73b483-542c-4cda-91a2-0f753ce21a91"
       },
-      "execution_count": 122,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3186,7 +3196,7 @@
         "id": "dgAkeSktpnwa",
         "outputId": "78aa7018-4215-46f3-c509-6b7fbb11e600"
       },
-      "execution_count": 123,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3591,7 +3601,7 @@
         "id": "PKVVI67RovX9",
         "outputId": "c327c2da-475d-4a35-c828-ab2513609f15"
       },
-      "execution_count": 124,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3900,7 +3910,7 @@
         "id": "SpIPmiM1rZuB",
         "outputId": "88010f23-85b8-437f-d056-7ae39e4cf044"
       },
-      "execution_count": 125,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3977,7 +3987,7 @@
         "id": "CrXEGBnULZkJ",
         "outputId": "c6573566-72f7-4280-facb-8a514e912118"
       },
-      "execution_count": 126,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4046,7 +4056,7 @@
         "id": "YXApukP0Mweo",
         "outputId": "f755dc01-7053-4bcf-8452-ac513e769a4a"
       },
-      "execution_count": 127,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4138,7 +4148,7 @@
       "metadata": {
         "id": "USpGFhwqUyGV"
       },
-      "execution_count": 128,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4156,7 +4166,7 @@
         "id": "h6dovbVwQeT5",
         "outputId": "50f5b438-9c6d-4cad-be8a-39344b967837"
       },
-      "execution_count": 129,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4604,7 +4614,7 @@
         "id": "NFTcLMxmVA4v",
         "outputId": "4595755a-452f-45bb-8885-2539bd388b74"
       },
-      "execution_count": 130,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5057,7 +5067,7 @@
         "id": "CRlWyhe7Zjed",
         "outputId": "6935a93d-37b3-4b58-9b45-3b8a16408cef"
       },
-      "execution_count": 131,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -5101,7 +5111,7 @@
         "id": "lbWq_gXNa7qN",
         "outputId": "b31af6c3-7b2b-4d09-b1b4-d554a51d4ace"
       },
-      "execution_count": 132,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -5128,7 +5138,7 @@
         "id": "7Zfje52sawZP",
         "outputId": "05dccbab-8a1e-45b9-d531-4a5698e091ae"
       },
-      "execution_count": 133,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5202,7 +5212,7 @@
         "id": "-biDo45QmMb8",
         "outputId": "ca38444c-246b-420f-95d2-8f808ed80e72"
       },
-      "execution_count": 134,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5250,7 +5260,7 @@
         "id": "WurQfxr8tWmn",
         "outputId": "2cff08ca-c7c9-4c95-ec91-0c779665e2d5"
       },
-      "execution_count": 135,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5319,7 +5329,7 @@
         "id": "VKlPgqIMGa08",
         "outputId": "0d3292e9-663d-4791-d59b-0d5635d258f5"
       },
-      "execution_count": 136,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5765,7 +5775,7 @@
           "height": 290
         }
       },
-      "execution_count": 137,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6217,7 +6227,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 138,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6243,7 +6253,7 @@
           "height": 300
         }
       },
-      "execution_count": 170,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6690,7 +6700,7 @@
         "id": "Fy2AWDR2nBfx",
         "outputId": "249f4587-2a1e-4dba-9d6a-25caec8ab57a"
       },
-      "execution_count": 171,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -7131,7 +7141,7 @@
       "metadata": {
         "id": "-eK9a7KVOxLl"
       },
-      "execution_count": 140,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -7154,7 +7164,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 141,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -7207,7 +7217,7 @@
         "id": "1HuEbJTQWuKN",
         "outputId": "0533d929-6bf8-4030-d7b1-50f498e36a1b"
       },
-      "execution_count": 142,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -7241,7 +7251,7 @@
       "metadata": {
         "id": "bvLAKOIiKw9r"
       },
-      "execution_count": 169,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -7277,7 +7287,7 @@
         "id": "dwjd0MAQr_gp",
         "outputId": "ddd01458-37f7-4f59-eb7b-eaacbe64cb26"
       },
-      "execution_count": 144,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -7417,7 +7427,7 @@
         "id": "G6l0fKiiqX6P",
         "outputId": "0464bde0-b40d-4a00-8fa6-4d824767a1e0"
       },
-      "execution_count": 145,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -7622,7 +7632,7 @@
         "id": "9GDDofWlmmp-",
         "outputId": "4f315e6c-fd26-4dd4-df8a-d2c0437ae7b9"
       },
-      "execution_count": 166,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -8239,7 +8249,7 @@
         "id": "UXsaOVKrilKE",
         "outputId": "609ce47e-1e0f-49e0-9895-b84c3936d447"
       },
-      "execution_count": 146,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -8274,7 +8284,7 @@
         "id": "5T15bNVbHvw2",
         "outputId": "529d9233-c110-45eb-ab4d-8b6195453447"
       },
-      "execution_count": 147,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -8343,7 +8353,7 @@
         "id": "mqikp92cQqln",
         "outputId": "ca7c643b-ad8a-4a61-bed5-d25bb7f5d08e"
       },
-      "execution_count": 148,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -8388,7 +8398,7 @@
         "id": "7m91ejFVFXlW",
         "outputId": "ebca0685-55f9-4d20-9a10-01c1dd48a084"
       },
-      "execution_count": 149,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -8428,7 +8438,7 @@
         "id": "M7gOkjGC71s_",
         "outputId": "c86de244-33ad-4b68-d06b-acdb936887c4"
       },
-      "execution_count": 150,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -8571,7 +8581,7 @@
         "id": "n48_QdmLTBoK",
         "outputId": "4dd9f198-c0b3-4c98-f4fb-858c6e73efbc"
       },
-      "execution_count": 151,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -8641,7 +8651,7 @@
       "metadata": {
         "id": "GV39GFDfOjUf"
       },
-      "execution_count": 152,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -8669,7 +8679,7 @@
         "id": "-Cf2HyWB7IlA",
         "outputId": "4591f35b-f27d-4f49-abf7-3db56d294135"
       },
-      "execution_count": 153,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -8722,7 +8732,7 @@
         "id": "K0dFBV8NQ3zA",
         "outputId": "e4aa55f8-7b8c-4588-df9a-6c49c94d313b"
       },
-      "execution_count": 154,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -8798,7 +8808,7 @@
       "metadata": {
         "id": "UP5gsDnMLN-A"
       },
-      "execution_count": 155,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -8841,7 +8851,7 @@
         "id": "kre9wYCNk7af",
         "outputId": "18005252-e479-470d-df8c-2176b00d7282"
       },
-      "execution_count": 156,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -9204,7 +9214,7 @@
         "id": "_FrnJkeDBN-0",
         "outputId": "dfe62fe1-46a3-4f34-8b36-a24bb37ac582"
       },
-      "execution_count": 157,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -10146,7 +10156,7 @@
         "id": "GjP9bwqMB6pf",
         "outputId": "be9c8fdc-31b5-49a3-af7d-8e523bda6a97"
       },
-      "execution_count": 158,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -10180,7 +10190,7 @@
         "id": "IJ5ent0nCT0M",
         "outputId": "206f5cbc-a278-4fe9-b53a-922b3c866553"
       },
-      "execution_count": 159,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -10221,7 +10231,7 @@
         "id": "54vMT6I1rlUU",
         "outputId": "477fe333-6735-42d3-f9df-443bcdac7c27"
       },
-      "execution_count": 176,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -10877,7 +10887,7 @@
         },
         "outputId": "924af20f-1e9e-49e3-cd78-8b2ad103014f"
       },
-      "execution_count": 160,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -10906,7 +10916,7 @@
         "id": "8TlDXGADsAUp",
         "outputId": "f5905498-5778-46f7-889f-3b86e08aa4ff"
       },
-      "execution_count": 175,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
