--- a/DataScienceII_EugeniaIngaramo.ipynb
+++ b/DataScienceII_EugeniaIngaramo.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMzx+WM95NnDroPajuXScyg",
+      "authorship_tag": "ABX9TyOoY0j57ZZ961LCmW/xSbXx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -119,6 +119,7 @@
         "#import matplotlib.style as style\n",
         "import missingno as msno                        # visualización de datos faltantes\n",
         "from sklearn.preprocessing import LabelEncoder  # conversión de variables categóricas\n",
+        "from sklearn.preprocessing import RobustScaler  # escalado de datos\n",
         "from scipy.stats import shapiro                 # Test estadístico de Normalidad\n",
         "import statsmodels.api as sm                    # Gráfico QQ-Plot\n",
         "\n",
