--- a/DataScienceII_EugeniaIngaramo.ipynb
+++ b/DataScienceII_EugeniaIngaramo.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOizlGtcM7fqiAv1Hd8kxi2",
+      "authorship_tag": "ABX9TyM4RABQ6QcPZC/eTXMKOH5o",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,6 +29,15 @@
     {
       "cell_type": "markdown",
       "source": [
+        "# **DATA SCIENCE II: Machine Learning para la Ciencia de Datos**\n"
+      ],
+      "metadata": {
+        "id": "4EGej2tT5tME"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "![Portada](https://github.com/eugeinga/CODER-DataScienceII/raw/main/IMG/IMG-BannerCODER.jpg)"
       ],
       "metadata": {
@@ -38,10 +47,10 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# **DATA SCIENCE II: Machine Learning para la Ciencia de Datos**\n"
+        "## **PROYECTO FINAL (Pre-entrega): Análisis de la calidad de vinos de Portugal**"
       ],
       "metadata": {
-        "id": "4EGej2tT5tME"
+        "id": "-Kt8iF735kV1"
       }
     },
     {
@@ -59,10 +68,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## **PROYECTO FINAL (Pre-entrega): Análisis de la calidad de vinos de Portugal**"
+        "<a id=\"1\"></a>\n",
+        "# <div style=\"padding:20px;color:white;margin:0;font-size:35px;font-family:Verdana;text-align:center;display:fill;border-radius:5px;background-color:#254E58;overflow:hidden\"><b> INTRODUCCION </b></div>"
       ],
       "metadata": {
-        "id": "-Kt8iF735kV1"
+        "id": "LPhlcsIJejhK"
       }
     },
     {
