--- a/DataScienceII_EugeniaIngaramo.ipynb
+++ b/DataScienceII_EugeniaIngaramo.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM4RABQ6QcPZC/eTXMKOH5o",
+      "authorship_tag": "ABX9TyN5evdOvnG7Rw7+aHu7V7Hg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -69,7 +69,7 @@
       "cell_type": "markdown",
       "source": [
         "<a id=\"1\"></a>\n",
-        "# <div style=\"padding:20px;color:white;margin:0;font-size:35px;font-family:Verdana;text-align:center;display:fill;border-radius:5px;background-color:#254E58;overflow:hidden\"><b> INTRODUCCION </b></div>"
+        "# <div style=\"padding:20px;color:yellow;margin:0;font-size:30px;font-family:Verdana;text-align:center;display:fill;border-radius:5px;background-color:#333333;overflow:hidden\"><b> INTRODUCCION </b></div>"
       ],
       "metadata": {
         "id": "LPhlcsIJejhK"
