--- a/DataScienceII_EugeniaIngaramo.ipynb
+++ b/DataScienceII_EugeniaIngaramo.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN5evdOvnG7Rw7+aHu7V7Hg",
+      "authorship_tag": "ABX9TyNQ7d3ZTXL/nDzJOaF4GQDq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -78,27 +78,33 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### **🌀 Introducción**\n",
-        "\n",
         "Mediante este proyecto se pretende analizar los datos vinculados a la calidad de los vinos de Portugal. Para ello, se plantearán distintas hipótesis que serán evaluadas mediante análisis estadístico. Se espera, además, identificar patrones y/o tendencias que pudieran predecir la calificación promedio de un vino.\n",
-        "![Datset Cover](https://github.com/eugeinga/CODER-DataScienceII/raw/main/IMG/IMG-dataset-cover.jpg)\n",
-        "\n",
-        "### **🌀 Acerca del set de datos**\n",
-        "\n",
+        "![Datset Cover](https://github.com/eugeinga/CODER-DataScienceII/raw/main/IMG/IMG-dataset-cover.jpg)"
+      ],
+      "metadata": {
+        "id": "48SU4MbJguaY"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "<a id=\"1\"></a>\n",
+        "# <div style=\"padding:20px;color:yellow;margin:0;font-size:30px;font-family:Verdana;text-align:center;display:fill;border-radius:5px;background-color:#333333;overflow:hidden\"><b> ACERCA DEL DATASET </b></div>"
+      ],
+      "metadata": {
+        "id": "y26bVJnVgzb9"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "##### **Wine Quality Data Set (Red & White Wine):** <https://www.kaggle.com/datasets/ruthgn/wine-quality-data-set-red-white-wine>\n",
         "\n",
         "Este conjunto de datos contiene registros relacionados con las variedades tinto y blanco del vino Vinho Verde portugués. Contiene información de 1599 muestras de vino tinto y 4898 muestras de vino blanco.\n",
         "\n",
         "Las variables de entrada en el conjunto de datos consisten en el tipo de vino (tinto o blanco) y métricas de pruebas objetivas (por ejemplo, niveles de acidez, valores de PH, ABV, etc.), mientras que la variable objetivo/salida es una puntuación numérica basada en datos sensoriales (de al menos 3 evaluaciones realizadas por expertos en vino). Cada experto calificó la calidad del vino entre 0 (muy mala) y 10 (muy excelente).\n",
         "\n",
-        "Por cuestiones de privacidad y logística, no hay datos sobre tipos de uva, marca de vino y precio de venta del vino.\n",
-        "\n",
-        "### **🌀 Hipótesis**\n",
-        "\n",
-        "Se establecen las siguientes hipótesis:\n",
-        "* La acidez fija y la acidez volátil tienen una correlación significativa con la calidad del vino.\n",
-        "* Niveles altos de dióxido de azufre (libre y total) afectan negativamente la calidad del vino.\n",
-        "* Las características químicas que más influyen en la calidad varían entre vinos blancos y tintos."
+        "Por cuestiones de privacidad y logística, no hay datos sobre tipos de uva, marca de vino y precio de venta del vino."
       ],
       "metadata": {
         "id": "WxXTZpPsYa2b"
@@ -107,7 +113,32 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## **PROCESAMIENTO DE DATOS**"
+        "<a id=\"1\"></a>\n",
+        "# <div style=\"padding:20px;color:yellow;margin:0;font-size:30px;font-family:Verdana;text-align:center;display:fill;border-radius:5px;background-color:#333333;overflow:hidden\"><b> OBJETIVO e HIPÓTESIS </b></div>"
+      ],
+      "metadata": {
+        "id": "i9n9VKMRg7ZA"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Mediante el presente análisis se pretende implementar un modelo de aprendizaje automático capaz de clasificación con una precisión aceptable los tipos de vinos en función de sus atributos claves.\n",
+        "\n",
+        "Se establecen las siguientes hipótesis:\n",
+        "* La acidez fija y la acidez volátil tienen una correlación significativa con la calidad del vino.\n",
+        "* Niveles altos de dióxido de azufre (libre y total) afectan negativamente la calidad del vino.\n",
+        "* Las características químicas que más influyen en la calidad varían entre vinos blancos y tintos."
+      ],
+      "metadata": {
+        "id": "TWxPDtfXhCqr"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "<a id=\"1\"></a>\n",
+        "# <div style=\"padding:20px;color:yellow;margin:0;font-size:30px;font-family:Verdana;text-align:center;display:fill;border-radius:5px;background-color:#333333;overflow:hidden\"><b> PROCESAMIENTO DE DATOS </b></div>"
       ],
       "metadata": {
         "id": "678TtHrMqL3f"
