--- a/DataScienceII_EugeniaIngaramo.ipynb
+++ b/DataScienceII_EugeniaIngaramo.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNQ7d3ZTXL/nDzJOaF4GQDq",
+      "authorship_tag": "ABX9TyO1/8itXUTwNNoktrlCeR89",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -142,6 +142,15 @@
       ],
       "metadata": {
         "id": "678TtHrMqL3f"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### **🔅 Carga de Datos**"
+      ],
+      "metadata": {
+        "id": "6IMIS-uEiM5Q"
       }
     },
     {
