--- a/DataScienceII_EugeniaIngaramo.ipynb
+++ b/DataScienceII_EugeniaIngaramo.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO1/8itXUTwNNoktrlCeR89",
+      "authorship_tag": "ABX9TyOja88wSpjqtIECmhwdtMis",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -145,15 +145,6 @@
       }
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "### **🔅 Carga de Datos**"
-      ],
-      "metadata": {
-        "id": "6IMIS-uEiM5Q"
-      }
-    },
-    {
       "cell_type": "code",
       "execution_count": 63,
       "metadata": {
@@ -183,13 +174,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### **1️⃣ Adquisición de Datos**\n",
-        "---\n",
-        "\n",
-        "\n"
+        "### **🔅 CARGA DE DATOS**\n",
+        "----"
       ],
       "metadata": {
-        "id": "52LXCUzF3VDW"
+        "id": "6IMIS-uEiM5Q"
       }
     },
     {
@@ -580,8 +569,18 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### **2️⃣ Data Wrangling**\n",
+        "### **🔅 DATA WRANGLING**\n",
         "---\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "52LXCUzF3VDW"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "El **Data Wrangling** consiste en limpiar, transformar y estructurar los datos para que sean más utilizables y valiosos. Este proceso es esencial porque los datos en su forma original a menudo están desordenados, incompletos o contienen errores que pueden afectar la calidad del análisis.\n",
         "\n",
         "Como parte de esta etapa se procederá a:\n",
