--- a/DataScienceII_EugeniaIngaramo.ipynb
+++ b/DataScienceII_EugeniaIngaramo.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOja88wSpjqtIECmhwdtMis",
+      "authorship_tag": "ABX9TyNikZv5aPV0ORZRWFMJeyxZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -123,9 +123,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Mediante el presente análisis se pretende implementar un modelo de aprendizaje automático capaz de clasificación con una precisión aceptable los tipos de vinos en función de sus atributos claves.\n",
+        "El presente trabajo tiene por objeto desarrollar un modelo predictivo mediante algoritmos de aprendizaje automático para predecir con una precisión aceptable la calidad de los vinos tintos y blancos en función de diversas propiedades y atributos químicos claves.\n",
         "\n",
-        "Se establecen las siguientes hipótesis:\n",
+        "Del mismo modo, se pretende evaluar y comparar el rendimiento de diferentes técnicas de aprendizaje automático para determinar el enfoque más eficaz para la predicción de la calidad del vino.\n",
+        "\n",
+        "🟡 **REVISAR** Se establecen las siguientes hipótesis:\n",
         "* La acidez fija y la acidez volátil tienen una correlación significativa con la calidad del vino.\n",
         "* Niveles altos de dióxido de azufre (libre y total) afectan negativamente la calidad del vino.\n",
         "* Las características químicas que más influyen en la calidad varían entre vinos blancos y tintos."
