--- a/DataScienceII_EugeniaIngaramo.ipynb
+++ b/DataScienceII_EugeniaIngaramo.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNikZv5aPV0ORZRWFMJeyxZ",
+      "authorship_tag": "ABX9TyO/XxEF55l4kSWdPVTR2bD6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -97,15 +97,7 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "##### **Wine Quality Data Set (Red & White Wine):** <https://www.kaggle.com/datasets/ruthgn/wine-quality-data-set-red-white-wine>\n",
-        "\n",
-        "Este conjunto de datos contiene registros relacionados con las variedades tinto y blanco del vino Vinho Verde portugués. Contiene información de 1599 muestras de vino tinto y 4898 muestras de vino blanco.\n",
-        "\n",
-        "Las variables de entrada en el conjunto de datos consisten en el tipo de vino (tinto o blanco) y métricas de pruebas objetivas (por ejemplo, niveles de acidez, valores de PH, ABV, etc.), mientras que la variable objetivo/salida es una puntuación numérica basada en datos sensoriales (de al menos 3 evaluaciones realizadas por expertos en vino). Cada experto calificó la calidad del vino entre 0 (muy mala) y 10 (muy excelente).\n",
-        "\n",
-        "Por cuestiones de privacidad y logística, no hay datos sobre tipos de uva, marca de vino y precio de venta del vino."
-      ],
+      "source": [],
       "metadata": {
         "id": "WxXTZpPsYa2b"
       }
@@ -134,6 +126,23 @@
       ],
       "metadata": {
         "id": "TWxPDtfXhCqr"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### **🔅 ORIGEN DE LOS DATOS**\n",
+        "\n",
+        "**Wine Quality Data Set (Red & White Wine):** <https://www.kaggle.com/datasets/ruthgn/wine-quality-data-set-red-white-wine>\n",
+        "\n",
+        "Este conjunto de datos contiene registros relacionados con las variedades tinto y blanco del vino Vinho Verde portugués. Contiene información de 1599 muestras de vino tinto y 4898 muestras de vino blanco.\n",
+        "\n",
+        "Las variables de entrada en el conjunto de datos consisten en el tipo de vino (tinto o blanco) y métricas de pruebas objetivas (por ejemplo, niveles de acidez, valores de PH, ABV, etc.), mientras que la variable objetivo/salida es una puntuación numérica basada en datos sensoriales (de al menos 3 evaluaciones realizadas por expertos en vino). Cada experto calificó la calidad del vino entre 0 (muy mala) y 10 (muy excelente).\n",
+        "\n",
+        "Por cuestiones de privacidad y logística, no hay datos sobre tipos de uva, marca de vino y precio de venta del vino."
+      ],
+      "metadata": {
+        "id": "0vLk_RRslv68"
       }
     },
     {
