--- a/DataScienceII_EugeniaIngaramo.ipynb
+++ b/DataScienceII_EugeniaIngaramo.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO/XxEF55l4kSWdPVTR2bD6",
+      "authorship_tag": "ABX9TyN5c/BywVUsOFecNQFFFVTQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -143,6 +143,54 @@
       ],
       "metadata": {
         "id": "0vLk_RRslv68"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### **🔅 VARIABLES BAJO ESTUDIO**\n",
+        "\n",
+        "\n",
+        "| VARIABLE             | DECRIPCION              | MIN     | MAX       | RANGO TIPICO  |\n",
+        "|----------------------|-------------------------|---------|-----------|---------------|\n",
+        "| **type** | Tipo de vino |   |   | Blanco /Negro |\n",
+        "| **fixed acidity**        | Acidez fija             | 4.0 g/L | 16.0 g/L  | 4.0 - 9.0 g/L |\n",
+        "| **volatile acidity**     | Acidez volátil          | 0.1 g/L | 1.6 g/L   | 0.2 - 1.0 g/L |\n",
+        "| **citric acid** | Acido cítrico | 0.0 g/L  | 1.6 mg/L  | 0 - 0.5 g/L |\n",
+        "| **residual sugar** | Azúcar residual | 0.1 g/L  | 45 g/L  | 0.9 - 15.5 mg/L |\n",
+        "| **chlorides** | Cloruros | 0.009 g/L  | 0.6 g/L  | 0.01 - 0.2 mg/L |\n",
+        "| **free sulful dioxide** | Dioxido de azufre libre | 1 mg/L  | 70 mg/L  | 10 - 50 mg/L |\n",
+        "| **total sulful dioxide** | Dioxido de azufre total | 6 mg/L  | 350 mg/L  | 50 - 150 mg/L |\n",
+        "| **density** | Densidad | 0.90 g/cm³  | 1.01 g/cm³  | 0.99 - 1.00 g/cm³ |\n",
+        "| **pH** | pH | 2.75  | 4.00  | 3.00 - 4.00 |\n",
+        "| **sulphates** | Sulfatos | 0.3 g/L  | 2.0 g/L  | 0.3 - 0.6 g/L |\n",
+        "| **alcohol** | Alcohol | 8 %  | 15 %  | 11 - 14 % |\n",
+        "| **quality** | Calidad | 1  | 10  | 1 - 10 |\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "l7hivp7JH8zz"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "* **Acidez fija:** La acidez fija es responsable del sabor ácido del vino. Los vinos con una acidez fija en el rango rípico suelen tener un sabor fresco y equilibrado. Los valores más altos son más comunes en vinos blancos y espumosos.\n",
+        "* **Acidez volátil:** Niveles altos de acidez volátil pueden dar un sabor avinagrado al vino, lo cual generalmente es un defecto.\n",
+        "* **Ácido cítrico:**\tEs un ácido que agrega frescura y un sabor afrutado al vino. Su presencia en pequeñas cantidades es deseable.\n",
+        "* **Azúcar residual:**\tEs el azúcar que queda en el vino después de la fermentación. Los vinos con menos azúcar residual son secos, mientras que los vinos con más azúcar residual son dulces.\n",
+        "* **Cloruros:**\tSe refiere al contenido de sal en el vino, que puede influir en su sabor y cuerpo. Niveles altos pueden dar un sabor salado, lo que generalmente es indeseable.\n",
+        "* **Dióxido de azufre libre:**\tEs el dióxido de azufre que no está ligado a otros compuestos en el vino y actúa como un conservante, ayudando a prevenir la oxidación y el crecimiento microbiano. Los vinos blancos y rosados suelen requerir más dióxido de azufre libre que los tintos.\n",
+        "* **Dióxido de azufre total:**\tEs la suma del dióxido de azufre libre y el combinado. Un nivel adecuado es importante para la conservación del vino, pero niveles demasiado altos pueden causar un sabor fuerte y desagradable. Los valores máximos permitidos varían según la legislación de cada país, generalmente se permite hasta 200 mg/L para vinos tintos y hasta 350 mg/L para vinos blancos y rosados.\n",
+        "* **Densidad:**\tSe refiere a la relación entre la masa y el volumen del vino. Está estrechamente relacionada con el contenido de azúcar y alcohol; un vino más dulce o con más alcohol generalmente tendrá mayor densidad. Los vinos secos tienden a estar más cerca del rango inferior, mientras que los vinos dulces están en el extremo superior.\n",
+        "* **pH:**\tMide la acidez o alcalinidad del vino. Un pH bajo (común en vinos blancos) indica alta acidez, lo que contribuye a la frescura y estabilidad del vino.\n",
+        "* **Sulfatos:**\tLos sulfatos, como el sulfato de potasio, son aditivos que pueden usarse para estabilizar el vino y mejorar su claridad. En cantidades excesivas pueden influir negativamente en el sabor y la sensación en boca.\n",
+        "* **Alcohol:**\tIndica el porcentaje de alcohol por volumen en el vino. Afecta el cuerpo, el sabor y la percepción general del vino. Un vino con más alcohol puede parecer más cálido y robusto. Los vinos de mesa suelen estar en el rango de 11% a 14%.\n",
+        "* **Calidad:**\tEste es un valor subjetivo basado en una evaluación sensorial y puede variar ampliamente según el catador y el tipo de vino. Un vino de alta calidad generalmente estará en el rango de 7 a 10."
+      ],
+      "metadata": {
+        "id": "SNLiXq25QnKK"
       }
     },
     {
@@ -604,54 +652,6 @@
       ],
       "metadata": {
         "id": "WwPtH_Lc6I0w"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "### **🔹 Variables bajo estudio**\n",
-        "\n",
-        "\n",
-        "| VARIABLE             | DECRIPCION              | MIN     | MAX       | RANGO TIPICO  |\n",
-        "|----------------------|-------------------------|---------|-----------|---------------|\n",
-        "| **type** | Tipo de vino |   |   | Blanco /Negro |\n",
-        "| **fixed acidity**        | Acidez fija             | 4.0 g/L | 16.0 g/L  | 4.0 - 9.0 g/L |\n",
-        "| **volatile acidity**     | Acidez volátil          | 0.1 g/L | 1.6 g/L   | 0.2 - 1.0 g/L |\n",
-        "| **citric acid** | Acido cítrico | 0.0 g/L  | 1.6 mg/L  | 0 - 0.5 g/L |\n",
-        "| **residual sugar** | Azúcar residual | 0.1 g/L  | 45 g/L  | 0.9 - 15.5 mg/L |\n",
-        "| **chlorides** | Cloruros | 0.009 g/L  | 0.6 g/L  | 0.01 - 0.2 mg/L |\n",
-        "| **free sulful dioxide** | Dioxido de azufre libre | 1 mg/L  | 70 mg/L  | 10 - 50 mg/L |\n",
-        "| **total sulful dioxide** | Dioxido de azufre total | 6 mg/L  | 350 mg/L  | 50 - 150 mg/L |\n",
-        "| **density** | Densidad | 0.90 g/cm³  | 1.01 g/cm³  | 0.99 - 1.00 g/cm³ |\n",
-        "| **pH** | pH | 2.75  | 4.00  | 3.00 - 4.00 |\n",
-        "| **sulphates** | Sulfatos | 0.3 g/L  | 2.0 g/L  | 0.3 - 0.6 g/L |\n",
-        "| **alcohol** | Alcohol | 8 %  | 15 %  | 11 - 14 % |\n",
-        "| **quality** | Calidad | 1  | 10  | 1 - 10 |\n",
-        "\n",
-        "\n"
-      ],
-      "metadata": {
-        "id": "l7hivp7JH8zz"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "* **Acidez fija:** La acidez fija es responsable del sabor ácido del vino. Los vinos con una acidez fija en el rango rípico suelen tener un sabor fresco y equilibrado. Los valores más altos son más comunes en vinos blancos y espumosos.\n",
-        "* **Acidez volátil:** Niveles altos de acidez volátil pueden dar un sabor avinagrado al vino, lo cual generalmente es un defecto.\n",
-        "* **Ácido cítrico:**\tEs un ácido que agrega frescura y un sabor afrutado al vino. Su presencia en pequeñas cantidades es deseable.\n",
-        "* **Azúcar residual:**\tEs el azúcar que queda en el vino después de la fermentación. Los vinos con menos azúcar residual son secos, mientras que los vinos con más azúcar residual son dulces.\n",
-        "* **Cloruros:**\tSe refiere al contenido de sal en el vino, que puede influir en su sabor y cuerpo. Niveles altos pueden dar un sabor salado, lo que generalmente es indeseable.\n",
-        "* **Dióxido de azufre libre:**\tEs el dióxido de azufre que no está ligado a otros compuestos en el vino y actúa como un conservante, ayudando a prevenir la oxidación y el crecimiento microbiano. Los vinos blancos y rosados suelen requerir más dióxido de azufre libre que los tintos.\n",
-        "* **Dióxido de azufre total:**\tEs la suma del dióxido de azufre libre y el combinado. Un nivel adecuado es importante para la conservación del vino, pero niveles demasiado altos pueden causar un sabor fuerte y desagradable. Los valores máximos permitidos varían según la legislación de cada país, generalmente se permite hasta 200 mg/L para vinos tintos y hasta 350 mg/L para vinos blancos y rosados.\n",
-        "* **Densidad:**\tSe refiere a la relación entre la masa y el volumen del vino. Está estrechamente relacionada con el contenido de azúcar y alcohol; un vino más dulce o con más alcohol generalmente tendrá mayor densidad. Los vinos secos tienden a estar más cerca del rango inferior, mientras que los vinos dulces están en el extremo superior.\n",
-        "* **pH:**\tMide la acidez o alcalinidad del vino. Un pH bajo (común en vinos blancos) indica alta acidez, lo que contribuye a la frescura y estabilidad del vino.\n",
-        "* **Sulfatos:**\tLos sulfatos, como el sulfato de potasio, son aditivos que pueden usarse para estabilizar el vino y mejorar su claridad. En cantidades excesivas pueden influir negativamente en el sabor y la sensación en boca.\n",
-        "* **Alcohol:**\tIndica el porcentaje de alcohol por volumen en el vino. Afecta el cuerpo, el sabor y la percepción general del vino. Un vino con más alcohol puede parecer más cálido y robusto. Los vinos de mesa suelen estar en el rango de 11% a 14%.\n",
-        "* **Calidad:**\tEste es un valor subjetivo basado en una evaluación sensorial y puede variar ampliamente según el catador y el tipo de vino. Un vino de alta calidad generalmente estará en el rango de 7 a 10."
-      ],
-      "metadata": {
-        "id": "SNLiXq25QnKK"
       }
     },
     {
